[gd_scene load_steps=3 format=3 uid="uid://cd48e4gqr48pn"]

[ext_resource type="Script" uid="uid://74ryh3myrsbc" path="res://Sprites/Baddies/baddie_base.gd" id="1_6jasc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6jasc"]
radius = 8.0
height = 16.0

[node name="BaddieBase" type="Node2D"]
script = ExtResource("1_6jasc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="AnimatableBody2D" type="AnimatableBody2D" parent="."]
collision_layer = 78
collision_mask = 528

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatableBody2D"]
shape = SubResource("CapsuleShape2D_6jasc")

[node name="VisionCast" type="RayCast2D" parent="."]
target_position = Vector2(50, 0)
collision_mask = 596

[node name="TopHurtCast" type="RayCast2D" parent="."]
target_position = Vector2(0, -16)
collision_mask = 16

[node name="VisualTimer" type="Timer" parent="."]

[node name="InjuryTimer" type="Timer" parent="."]
